# cmake_generator

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  license
.github/: pull_request_template.md
sample/AppHello/src/: main.cpp
sample/AppHello/templates/: addSubDirectories.jinja  project.jinja
sample/src/: main.cpp  say-hello.cpp  say-hello.hpp
src/: CMakeLists.txt
src/AppCSW/: AppBuildConf.cpp.in  AppBuildConf.hpp  AppBuildConf.hpp.in  AppCSWMain.cpp  AppCSWTemplate.cpp  AppCSWTemplate.hpp  CMakeLists.txt
src/AppCodeGen/: AppCGListFiles.cpp  AppCGListFiles.hpp  AppCGenProject.cpp  AppCGenProject.hpp  CMakeLists.txt
src/AppMain/: AppMainMain.cpp  AppMainOptions.cpp  AppMainOptions.hpp  CMakeLists.txt
src/AppTCM/: AppBuildConf.cpp.in  AppBuildConf.hpp  AppTCMMain.cpp  AppTCMOptions.cpp  AppTCMOptions.hpp  CMakeLists.txt
src/CompCodeGen/: CMakeLists.txt  CmpCGAddSubDirs.cpp  CmpCGAddSubDirs.hpp  CmpCGBinary.cpp  CmpCGBinary.hpp  CmpCGLibrary.cpp  CmpCGLibrary.hpp  CmpCGListFiles.cpp  CmpCGListFiles.hpp  CmpCGProject.cpp  CmpCGProject.hpp  CmpCGTarget.cpp  CmpCGTarget.hpp  CmpCGUtility.cpp  CmpCGUtility.hpp
src/CompConfig/: CMakeLists.txt  CmpConfCMake.cpp.in  CmpConfCMake.hpp  CmpConfInstall.cpp.in  CmpConfInstall.hpp
src/CompFile/: CMakeLists.txt  CmpFileSysPath.cpp  CmpFileSysPath.hpp
src/CompRender/: CMakeLists.txt  CmpRenderRendering.cpp  CmpRenderRendering.hpp
src/CompVersion/: CMakeLists.txt  CmpVerVersion.cpp  CmpVerVersion.hpp
template/: CMakeLists.txt  binary.tpl  library.tpl  projects.cmake
template/cpp/: buildTarget.cmake  globalSettings.template
templates/: CMakeLists.txt  project.jinja
