# データのインストール先
set(PROJECT_DATA_DIR "${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}")

# テンプレートファイルをインストールする
install(
    DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    DESTINATION "${PROJECT_INSTALL_DATA_DIR}/templates"
    PATTERN ".jinja" PERMISSIONS OWNER_READ GROUP_READ
    PATTERN "CMakeLists.txt" EXCLUDE
)